[package]
name = "contrasting_colors"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.11.0"
parking_lot = "0.12.4"
itertools = "0.14.0"
rand = "0.9.2"

[lints.clippy]
complexity = "warn"
correctness = "warn"
nursery = "warn"
pedantic = "warn"
perf = "warn"
suspicious = "warn"